# si_prefix

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  __init__.py  pyproject.toml  si_prefix.py
.github/workflows/: mainl.yml
si_prefix/: __init__.py  __init__.pyi
src/si_prefix/: __init__.py  matplotlib_func_formatter.py
