[project]
name = "si-prefix"
version = "0.1.0"
description = ""
authors = [{ name = "Alexander Hammans", email = "a.hammans@kostal.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
matplotlib_formatter = ["matplotlib (>=3.10.1,<4.0.0)"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
