[project]
authors = [{ name = "Alexander Hammans", email = "a.hammans@kostal.com" }]
dependencies = []
description = ""
name = "si-prefix"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
matplotlib_formatter = ["matplotlib (>=3.10.1,<4.0.0)"]

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "ruff>=0.12.11",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.14,<0.9.0"]
